# quant-platform

./: .gitignore  README.md  pyproject.toml
quant_platform/: __init__.py  config.py  logging_config.py  settings.py
quant_platform/api/: __init__.py  cli.py
quant_platform/backtest/: __init__.py  engine.py  events.py  execution.py
quant_platform/market_data/: __init__.py  cache.py  client.py  fetcher.py
quant_platform/ml/: __init__.py  features.py  trainer.py  validator.py
quant_platform/reporting/: __init__.py  dashboard.py  report.py
quant_platform/risk/: __init__.py  metrics.py  portfolio.py  sizing.py
quant_platform/strategy/: __init__.py  base.py  example.py
tests/: test_backtest.py  test_cli.py  test_market_data.py  test_ml.py  test_reporting.py  test_risk.py  test_strategy.py
